--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>We implement reasonable technical and administrative measures to safeguard your information against unauthorized access or disclosure.</p>
 
     <h2>Contact Information</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+    <p>If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:wanglonghai0000@gmail.com">your-email@example.com</a></p>
     
     <p>Last updated: September 25, 2025</p>
 </body>
