--- a/index.html
+++ b/index.html
@@ -1,39 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
-    <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            margin: 40px; 
-            line-height: 1.6; 
-            background-color: #f9f9f9; 
-            color: #333; 
-        }
-        h1 { color: #2c3e50; }
-        p { margin-bottom: 15px; }
-        a { color: #1a73e8; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy - NetToolkit Pro</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1, h2 {
+      color: #007AFF;
+    }
+  </style>
 </head>
 <body>
-    <h1>Privacy Policy</h1>
-    <p>Welcome to our application. We highly value your privacy. This Privacy Policy explains how we collect, use, and protect your personal information.</p>
-    
-    <h2>Information Collection</h2>
-    <p>We may collect device information, usage data, and other relevant details to improve the functionality and user experience of our application.</p>
+  <h1>Privacy Policy</h1>
+  <p><strong>Last updated:</strong> September 25, 2025</p>
 
-    <h2>Use of Information</h2>
-    <p>The collected information is used solely to provide and optimize our services and will not be sold or rented to third parties.</p>
+  <p>This Privacy Policy applies to the app <strong>NetToolkit Pro</strong>, developed by <strong>Beijing Dinghai Shengshi Technology Co., Ltd.</strong></p>
 
-    <h2>Information Protection</h2>
-    <p>We implement reasonable technical and administrative measures to safeguard your information against unauthorized access or disclosure.</p>
+  <h2>Information We Collect</h2>
+  <p>We do <strong>not</strong> collect any personally identifiable information such as name, email, or phone number.</p>
+  <p>Our app may collect limited <strong>device information</strong> (e.g., device model, OS version) and <strong>usage data</strong> (such as feature usage and crash logs) to improve app performance and user experience.</p>
 
-    <h2>Contact Information</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:wanglonghai0000@gmail.com">wanglonghai0000@gmail.com</a></p>
-    
-    <p>Last updated: September 25, 2025</p>
+  <h2>How We Use Information</h2>
+  <ul>
+    <li>To provide and improve app functionality</li>
+    <li>To diagnose issues and enhance user experience</li>
+  </ul>
+  <p>We do <strong>not</strong> sell, rent, or share your data with third parties.</p>
+
+  <h2>Data Protection</h2>
+  <p>We use reasonable technical and administrative measures to protect your data from unauthorized access, loss, or misuse.</p>
+
+  <h2>Your Rights</h2>
+  <p>You may contact us at any time to request deletion of collected data or to ask questions about this policy.</p>
+
+  <h2>Contact Us</h2>
+  <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
+  <p>📧 <a href="mailto:wanglonghai0000@gmail.com">wanglonghai0000@gmail.com</a></p>
+
+  <hr>
+  <p>By using <strong>NetToolkit Pro</strong>, you agree to this Privacy Policy.</p>
 </body>
 </html>
